--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>AnimeGallery.darshanonline</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="hola1">
         <nav class="hola2">
             <ul class="hola2">
                 <li><a href="">Anime Gallery</a></li>
-                <li><a href="">About Us</a></li>
-                <li><a href="">Certifications</a></li>
+                <li><a href="#aboutus">About Us</a></li>
+                <li><a href="Certifications">Certifications</a></li>
                 <li><a href="">History</a> </li>
             </ul>
         </nav>
@@ -43,7 +44,44 @@
         </div>
     </div>
     <br>
+    <!-- aboutus -->
+    <section id="aboutus">
+        <div class="hola11">
+            <h2>About Us</h2>
+            <p>Stream over 200+ anime series and movies. Adfree and fast download links. You can also join our telegram
+                channel for more content like games, manga pdf books, wallpapers and talk with other otaku's of our
+                community. This site was build by Darshan. </p>
+            <p>We are on discord as well!</p>
+            <!-- <p></p> -->
+
+
+        </div>
+    </section>
+    <hr id="hola12" width="100%">
+
+    <section id="certifications">
+        <div class="hola13">
+            <ul>
+                <li>
+                    <h3>Certifications - <span> Certified by Japanese Otaku community!
+                </li> </span></h3>
+                <li>
+                    <h3 id="hola133">Ara Ara , SAIONARA</h3>
+                </li>
+            </ul>
+            <!-- <p></p> -->
+
+
+        </div>
+    </section>
+    <!-- certificationsends here -->
+
+
+
+
     <div class="hola5">
+        <!-- ends here -->
+
         <!-- Unordered list starts here -->
         <ul id="hola9">
             <li id="hola10"><b>Download and Play</b></li>
