--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="">Anime Gallery</a></li>
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="Certifications">Certifications</a></li>
-                <li><a href="">History</a> </li>
+                <li><a href="history.html">History</a> </li>
             </ul>
         </nav>
         <!-- single anime gallery tag -->
