--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="hola2">
                 <li><a href="">Anime Gallery</a></li>
                 <li><a href="#aboutus">About Us</a></li>
-                <li><a href="Certifications">Certifications</a></li>
+                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="history.html">History</a> </li>
             </ul>
         </nav>
