--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="history.html">History</a> </li>
+                <!-- <form action="history.html" target="_blank"></form> -->
             </ul>
         </nav>
         <!-- single anime gallery tag -->
