--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- ends here -->
 
 
-    <script src="animation.j"></script>
+    <script src="animation.js"></script>
 </body>
 
 </html>
