--- a/index.html
+++ b/index.html
@@ -118,14 +118,66 @@
             <li><a href="">Contact AG</a></li>
         </ul>
     </div>
-    <!-- and ends here -->
+
+
+    <!-- form starts here -->
+
+    <div class="container1">
+        <div class="text">Contact us here</div>
+        <form action="#">
+            <div class="form-row">
+                <div class="input-data">
+                    <label for="">First Name</label>
+                    <div class="underline"></div>
+                    <input type="text" required>
+
+
+                </div>
+                <div class="input-data">
+                    <label for="">Last Name</label>
+                    <div class="underline"></div>
+
+                    <input type="text" required>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="input-data">
+                    <label for="">Email Address</label>
+                    <div class="underline"></div>
+                    <input type="text" required>
+
+
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="input-data textarea">
+                    <label for="">Write your message</label>
+                    <textarea rows="3" cols="22" required="" style="height: 50px; width: 164px;"></textarea>
+                    <br />
+                    <div class="underline"></div>
+
+                    <div class="form-rowsubmit-btn">
+                        <div class="input-data">
+                            <div class="inner"></div>
+                            <input type="submit" value="submit">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div <!-- and ends here -->
 
     <!-- pre tag starts here  -->
     <pre> <a href="https://github.com/syrusthenub007">Copyright @syrusthenub007.github.io </a></pre>
     <!-- ends here -->
 
+    <!-- form for contact us starts from here  -->
 
-    <script src="animation.js"></script>
+
+
+
+
+    <script src="animation.j"></script>
 </body>
 
 </html>
