--- a/index.html
+++ b/index.html
@@ -119,18 +119,59 @@
         </ul>
     </div>
 
-
     <!-- form starts here -->
+    <div class="formhtml0">
 
 
+        <div class="formhtml">
+
+            <div class="formhtml2">
+                <form action="#"></form>
+                <lebel for="fname">First Name
+                </lebel>
+                <div id="formhtml22">
+                    <input type="text">
+                </div>
+
+            </div>
+
+            <div class="formhtml3">
+                <form action="#"></form>
+                <lebel for="lname">Last Name</lebel>
+                <div id="formhtml33">
+                    <input type="text">
+                </div>
+
+            </div>
+
+            <div class="formhtml4">
+                <form action="#"></form>
+                <lebel for="email">Email</lebel>
+                <div id="formhtml44">
+                    <input type="text">
+                </div>
+
+            </div>
+
+            <div class="formhtml5">
+                <form action="#"></form>
+                <input type="button" value="submit">
+            </div>
+            <br>
+
+        </div>
+
+    </div>
 
     <!-- pre tag starts here  -->
-    <pre> <a href="https://github.com/syrusthenub007">Copyright @syrusthenub007.github.io </a></pre>
+
+    <pre> <a href="https://github.com/darshanborah007">Copyright @darshanborah007.github.io </a></pre>
     <!-- ends here -->
 
-    <!-- form for contact us starts from here  -->
+    <!-- js script  -->
 
     <script src="animation.j"></script>
+
 </body>
 
 </html>
