close to end commit

--- a/index.html
+++ b/index.html
@@ -60,107 +60,108 @@
     </section>
     <hr id="hola12" width="100%">
 
-    <section id="certifications">
-        <div class="hola13">
-            <ul>
-                <li>
-                    <h3>Certifications - <span> Certified by Japanese Otaku community!
-                </li> </span></h3>
-                <li>
-                    <h3 id="hola133">Ara Ara , SAIONARA</h3>
-                </li>
+    <div class="bg1">
+        <section id="certifications">
+            <div class="hola13">
+                <ul>
+                    <li>
+                        <h3>Certifications - <span> Certified by Japanese Otaku community!
+                    </li> </span></h3>
+                    <li>
+                        <h3 id="hola133">Ara Ara , SAIONARA</h3>
+                    </li>
+                </ul>
+                <!-- <p></p> -->
+
+
+            </div>
+        </section>
+        <!-- certificationsends here -->
+
+
+
+
+        <div class="hola5">
+            <!-- ends here -->
+
+            <!-- Unordered list starts here -->
+            <ul id="hola9">
+                <li id="hola10"><b>Download and Play</b></li>
+                <hr width="96%" align="left" color="ffffff">
+                <li><a href="">Manga</a></li>
+                <li><a href="">Anime Games</a></li>
+                <li><a href="">Virtual Reality</a></li>
+                <li><a href="">Coupon Codes</a></li>
             </ul>
-            <!-- <p></p> -->
 
+            <ul id="hola9">
+                <li id="hola10"><b>Anime Merchandise</b></li>
+                <hr width="98%" align="left" color="ffffff">
+                <li><a href="">Clothes</a></li>
+                <li><a href="">Coffee Mugs</a></li>
+                <li><a href="">Phone Covers</a></li>
+                <li><a href="">Manga editions</a></li>
+            </ul>
 
-        </div>
-    </section>
-    <!-- certificationsends here -->
+            <ul id="hola9">
+                <li id="hola10"><b>Other Works</b></li>
+                <hr width="63%" align="left" color="ffffff">
+                <li><a href="">Anime Shops</a></li>
+                <li><a href="">Shop for business</a></li>
+                <li><a href="">Jobs</a></li>
+            </ul>
 
-
-
-
-    <div class="hola5">
-        <!-- ends here -->
-
-        <!-- Unordered list starts here -->
-        <ul id="hola9">
-            <li id="hola10"><b>Download and Play</b></li>
-            <hr width="96%" align="left" color="ffffff">
-            <li><a href="">Manga</a></li>
-            <li><a href="">Anime Games</a></li>
-            <li><a href="">Virtual Reality</a></li>
-            <li><a href="">Coupon Codes</a></li>
-        </ul>
-
-        <ul id="hola9">
-            <li id="hola10"><b>Anime Merchandise</b></li>
-            <hr width="98%" align="left" color="ffffff">
-            <li><a href="">Clothes</a></li>
-            <li><a href="">Coffee Mugs</a></li>
-            <li><a href="">Phone Covers</a></li>
-            <li><a href="">Manga editions</a></li>
-        </ul>
-
-        <ul id="hola9">
-            <li id="hola10"><b>Other Works</b></li>
-            <hr width="63%" align="left" color="ffffff">
-            <li><a href="">Anime Shops</a></li>
-            <li><a href="">Shop for business</a></li>
-            <li><a href="">Jobs</a></li>
-        </ul>
-
-        <ul id="hola9">
-            <li id="hola10"><b>About AG </b></li>
-            <hr width="47%" align="left" color="ffffff">
-            <li><a href="">AG Blogs</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Contact AG</a></li>
-        </ul>
-    </div>
-
-    <!-- form starts here -->
-    <div class="formhtml0">
-
-
-        <div class="formhtml">
-
-            <div class="formhtml2">
-                <form action="#"></form>
-                <lebel for="fname">First Name
-                </lebel>
-                <div id="formhtml22">
-                    <input type="text">
-                </div>
-
-            </div>
-
-            <div class="formhtml3">
-                <form action="#"></form>
-                <lebel for="lname">Last Name</lebel>
-                <div id="formhtml33">
-                    <input type="text">
-                </div>
-
-            </div>
-
-            <div class="formhtml4">
-                <form action="#"></form>
-                <lebel for="email">Email</lebel>
-                <div id="formhtml44">
-                    <input type="text">
-                </div>
-
-            </div>
-
-            <div class="formhtml5">
-                <form action="#"></form>
-                <input type="button" value="submit">
-            </div>
-            <br>
-
+            <ul id="hola9">
+                <li id="hola10"><b>About AG </b></li>
+                <hr width="47%" align="left" color="ffffff">
+                <li><a href="">AG Blogs</a></li>
+                <li><a href="">Events</a></li>
+                <li><a href="">Contact AG</a></li>
+            </ul>
         </div>
 
+        <!-- form starts here -->
+        <div class="formhtml0">
+
+
+            <div class="formhtml">
+
+                <div class="formhtml2">
+                    <form action="#"></form>
+                    <lebel for="fname">First Name
+                    </lebel>
+                    <div id="formhtml22">
+                        <input type="text">
+                    </div>
+
+                </div>
+
+                <div class="formhtml3">
+                    <form action="#"></form>
+                    <lebel for="lname">Last Name</lebel>
+                    <div id="formhtml33">
+                        <input type="text">
+                    </div>
+
+                </div>
+
+                <div class="formhtml4">
+                    <form action="#"></form>
+                    <lebel for="email">Email</lebel>
+                    <div id="formhtml44">
+                        <input type="text">
+                    </div>
+
+                </div>
+
+                <div class="formhtml5">
+                    <form action="#"></form>
+                    <input type="button" value="submit">
+                </div>
+                <br>
+
+            </div>
+        </div>
     </div>
 
     <!-- pre tag starts here  -->
