--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="history.html">History</a> </li>
-                <!-- <form action="history.html" target="_blank"></form> -->
             </ul>
         </nav>
+
         <!-- single anime gallery tag -->
         <a href="">Anime Gallery</a>
+
         <br><br>
 
 
@@ -44,8 +45,11 @@
             </p>
         </div>
     </div>
+
     <br>
-    <!-- aboutus -->
+
+    <!-- aboutus  section-->
+
     <section id="aboutus">
         <div class="hola11">
             <h2>About Us</h2>
@@ -53,12 +57,13 @@
                 channel for more content like games, manga pdf books, wallpapers and talk with other otaku's of our
                 community. This site was build by Darshan. </p>
             <p>We are on discord as well!</p>
-            <!-- <p></p> -->
-
-
         </div>
     </section>
+
     <hr id="hola12" width="100%">
+
+
+    <!-- this div is for background image anime4.jfif ////// certifications starts from here..... -->
 
     <div class="bg1">
         <section id="certifications">
@@ -71,20 +76,17 @@
                         <h3 id="hola133">Ara Ara , SAIONARA</h3>
                     </li>
                 </ul>
-                <!-- <p></p> -->
-
-
             </div>
         </section>
-        <!-- certificationsends here -->
 
-
-
+        <!-- certifications/bg ends here -->
 
         <div class="hola5">
+
             <!-- ends here -->
 
             <!-- Unordered list starts here -->
+
             <ul id="hola9">
                 <li id="hola10"><b>Download and Play</b></li>
                 <hr width="96%" align="left" color="ffffff">
@@ -119,6 +121,7 @@
                 <li><a href="">Contact AG</a></li>
             </ul>
         </div>
+        <!-- ends here -->
 
         <!-- form starts here -->
         <div class="formhtml0">
@@ -163,15 +166,17 @@
             </div>
         </div>
     </div>
+    <!-- form ends here! -->
 
     <!-- pre tag starts here  -->
 
     <pre> <a href="https://github.com/darshanborah007">Copyright @darshanborah007.github.io </a></pre>
+
     <!-- ends here -->
 
-    <!-- js script  -->
 
-    <script src="animation.j"></script>
+    <!-- js script  -->
+    <script src="animation.js"></script>
 
 </body>
 
